# todo_turbolinks

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/controllers/: mod.rs  root.rs  todo.rs  todos.rs
src/db/: mod.rs  redis.rs  todos.rs
src/domain/: mod.rs
src/view_models/: todos.rs
static/css/: base.css  index.css
static/js/: app.js
templates/todos/: list.html.hbs
