[package]
name = "todo_turbolinks"
version = "0.1.0"
authors = ["Pavlo Mitin <mitin.pavel@gmail.com>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
redis = "0.8.0"
r2d2 = "*"
r2d2_redis = "*"
rand = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
